--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ body {
 
 .header > h2 {
     margin: 0%;
+    text-align: center;
 }
 
 .mainContent {
@@ -58,4 +59,16 @@ body {
     width: 100%;
     border: solid 1px;
     margin: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(0, 132, 219);
+}
+
+.circle {
+    border: solid;
+    height: 80%;
+    width: 80%;
+    border-radius: 50%;
+    background-color: white;
 }
