--- a/style.css
+++ b/style.css
@@ -52,6 +52,7 @@ body {
     height: 100%;
     border: solid;
     width: 14%;
+    border-color: rgb(0, 86, 143);
 }
 
 .square {
@@ -63,6 +64,7 @@ body {
     align-items: center;
     justify-content: center;
     background-color: rgb(0, 132, 219);
+    border-color: rgb(0, 86, 143);
 }
 
 .circle {
