--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ body {
 }
 
 .gameBoard {
+    position: relative;
     height: 95%;
     display: flex;
     border: solid;
@@ -73,4 +74,24 @@ body {
     width: 80%;
     border-radius: 50%;
     background-color: white;
+}
+
+.winText{
+    font-family: Arial;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    font-size: 8vw;
+    text-align: center;
+    color: darkblue;
+    font-weight: bold;
+}
+
+.player1{
+    background-color: black;
+}
+
+.player2{
+    background-color: red;
 }
