--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@ body {
 .gameContainer {
     width: 100%;
     height: 98%;
-    border: solid red;
     display: flex;
     flex-wrap: wrap;
     box-sizing: border-box;
@@ -16,6 +15,12 @@ body {
     width: 100%;
     height: 10%;
     background-color: green;
+}
+
+.header > h2 {
+    margin: 0%;
+    text-align: center;
+    font-size: 7vh;
 }
 
 .leftNav {
@@ -28,24 +33,18 @@ body {
     margin: 0;
 }
 
-.header > h2 {
-    margin: 0%;
-    text-align: center;
-}
-
 .mainContent {
     width: 83%;
     height: 89.4%;
-    border: solid;
     display: flex;
 }
 
 .gameBoard {
     height: 95%;
     display: flex;
-    border: solid;
     width: 86%;
     margin: auto;
+    box-shadow: 5px 10px;
 }
 
 .column {
@@ -56,7 +55,7 @@ body {
 }
 
 .square {
-    height: 16.4%;
+    height: 16.5%;
     width: 100%;
     border: solid 1px;
     margin: 0;
