--- a/style.css
+++ b/style.css
@@ -42,38 +42,39 @@ body {
 
 .gameBoard {
     position: relative;
-    height: 95%;
+    height: 45vw;
     display: flex;
-    border: solid;
-    width: 86%;
+    width: 45vw;
     margin: auto;
+    padding-top: 1%;
 }
 
 .column {
     height: 100%;
-    border: solid;
-    width: 14%;
-    border-color: rgb(0, 86, 143);
+    /*border: solid;*/
+    width: 14.8%;
+    border-color: #00568f;
 }
 
 .square {
-    height: 16.4%;
+    height: 14.29%;
     width: 100%;
-    border: solid 1px;
+    border: solid 0.2vw;
     margin: 0;
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: rgb(0, 132, 219);
-    border-color: rgb(0, 86, 143);
+    background-color: #0084db;
+    border-color: #00568f;
 }
 
 .circle {
-    border: solid;
+    border: solid 0.1vw;
     height: 80%;
     width: 80%;
     border-radius: 50%;
     background-color: white;
+    border-color: #00568f;
 }
 
 .winText{
@@ -89,9 +90,19 @@ body {
 }
 
 .player1{
-    background-color: black;
+    background-image: url("image/player1.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    background-color: transparent;
+    border: 0;
 }
 
 .player2{
-    background-color: red;
+    background-image: url("image/player2.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    background-color: transparent;
+    border: 0;
 }
