--- a/style.css
+++ b/style.css
@@ -123,8 +123,8 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     background: #fff;
-    width: 45%;
-    height: 40%;
+    width: 50%;
+    height: 70%;
     padding: 20px;
 }
 .modalconent > form {
@@ -134,47 +134,102 @@ body {
 .modalH1{
     font-size: 32pt;
     margin: 0;
-    background-color: lightskyblue;
-    height: 15%;
+    background-color: #1f98ff;
+    height: 10%;
     text-align: center;
+    border-radius: 20px 20px 0px 0px;
 }
 
-.rulesContainer{
-    font-size: 15pt;
-    text-align: center;
-    width: 35%;
-    height: 81%;
-    float: right;
-    margin-right: 8%;
-    margin-left: 7%;
-    font-family: monospace;
-}
+/*.rulesContainer{*/
+    /*font-size: 15pt;*/
+    /*text-align: center;*/
+    /*width: 35%;*/
+    /*height: 81%;*/
+    /*float: right;*/
+    /*margin-right: 8%;*/
+    /*margin-left: 7%;*/
+    /*font-family: monospace;*/
+/*}*/
 .form1{
-    width: 25%;
-    float: right;
-     font-size: 17pt;
-     height: 85%;
-     background-color: lightskyblue;
-}
-.form2{
-    width: 25%;
+    margin-left: -2px;
+    margin-top: -2px;
+    width: 100.5%;
     float: left;
     font-size: 17pt;
-    height: 85%;
+    height: 51.5%;
+    background-color: #1f98ff;
+}
+.form1Container{
+    float: left;
+    height: 87%;
+    width: 33%;
+}
+.form2container{
+    float: right;
+    height: 87%;
+    width: 33%;
+}
+.middle{
+    text-align: center;
+    float: left;
+    width: 33.9%;
+    height: 89.6%;
+    display: inline-block;
     background-color: lightskyblue;
+}
+    #rules{
+        font-size: 21pt;
+        margin: 10%;
+    }
+.form11{
+    margin-left: -2px;
+    margin-top: -2px;
+    width: 100.5%;
+    float: left;
+    font-size: 17pt;
+    height: 51.5%;
+    background-color: #1f98ff;
+    border-radius: 0px 0px 20px 0px;
+}
+.form2{
+    margin-right: -2px;
+    margin-top: -2px;
+    width: 100%;
+    float: left;
+    font-size: 17pt;
+    height: 51.5%;
+    background-color: #1f98ff;
+ }
+.form21{
+    margin-right: -2px;
+    margin-top: -2px;
+    width: 100%;
+    font-size: 17pt;
+    height: 51.5%;
+    background-color: #1f98ff;
+    display: inline-block;
+    border-radius: 0px 0px 0px 20px;
 }
 #connect4Header{
     margin: 0;
+    font-size: 32pt;
 }
 .firstPlayer{
-    margin: 5px;
+    margin: 3%;
+    margin-left: 5%;
     height: 5%;
+    display: inline-block;
 }
 .secondPlayer {
-    margin: 5px;
+    margin: 3%;
     height: 5%;
+    display: inline-block;
 }
 .input{
     height: 10%;
     width: 10%;
+}
+#submit{
+    height: 19%;
+    margin-right: 40%;
 }
