--- a/style.css
+++ b/style.css
@@ -11,15 +11,11 @@ body {
     display: flex;
     flex-wrap: wrap;
     box-sizing: border-box;
+    font-family: 'VT323', monospace;
 }
 
-.header {
-    width: 100%;
-    height: 10%;
-    background-color: transparent;
-}
 
-.header > h2 {
+.gameBoardContainer > h2 {
     margin: 0%;
     text-align: center;
     font-size: 7vh;
@@ -37,28 +33,26 @@ body {
 
 .player1Stats, .player2Stats {
     width: 90%;
-    height: 30%;
+    height: 35%;
     border: solid;
     border-radius: 5%;
     background-color: white;
 }
 
-.player1Stats h1, p {
+.neon{
+    animation: neon2 1.5s ease-in-out infinite alternate;
+}
+
+.tokenStat{
+    width: 9vmin;
+    height: 9vmin;
+    margin-left: 5%;
+}
+
+.player1Stats h1, .player2Stats h1 {
     margin-left: 10px;
+    font-size: 4vmin;
 }
-
-.player2Stats > p {
-    margin-top: 55px;
-    float: left;
-}
-
-.player1Stats > p {
-    margin-top: 55px;
-    float: left;
-}
-/* .resetButtonDiv {
-
-} */
 
 .mainContent {
     width: 75%;
@@ -81,6 +75,10 @@ body {
     height: 84vmin;
     padding-top: 0%;
     font-size: 0;
+}
+
+.gameBoardContainer h2{
+    font-size: 10vmin;
 }
 
 .leftSide {
@@ -138,7 +136,7 @@ body {
 }
 
 .winText{
-    font-family: Arial;
+    font-family:  'VT323', monospace;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -158,6 +156,20 @@ body {
     height: 13%;
     width: 91%;
     z-index: -1;
+}
+
+
+@keyframes neon2 {
+    from {
+        text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #FFDD1B, 0 0 70px #FFDD1B, 0 0 80px #FFDD1B, 0 0 100px #FFDD1B, 0 0 150px #FFDD1B;
+    }
+    to {
+        text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #FFDD1B, 0 0 35px #FFDD1B, 0 0 40px #FFDD1B, 0 0 50px #FFDD1B, 0 0 75px #FFDD1B;
+    }
+}
+
+.disableClicks{
+    pointer-events: none;
 }
 /*------------------------------------Modal-----------------------------------------------*/
 
